--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "micro -l tcp://0.0.0.0:${PORT-3000}"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cache": "^2.1.0",
     "commander": "^2.18.0",
     "dotenv": "^6.0.0",
     "lodash.concat": "^4.5.0",
@@ -16,6 +18,7 @@
     "lodash.sortby": "^4.7.0",
     "lodash.without": "^4.4.0",
     "micro": "^9.3.3",
+    "micro-cors": "^0.1.0",
     "twit": "^2.2.11"
   }
 }
