--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "bloomer": "^0.6.3",
-    "bulma": "^0.7.1",
-    "node-sass-chokidar": "^1.3.3",
+    "bulma": "^0.7.2",
+    "node-sass-chokidar": "^1.3",
     "npm-run-all": "^4.1.3",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-scripts": "1.1.5"
+    "react": "^16.6.0",
+    "react-copy-to-clipboard": "^5.0.1",
+    "react-dom": "^16.6",
+    "react-scripts": "^2.0.5"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
@@ -20,5 +21,11 @@
     "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
