--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "bloomer": "^0.6.3",
     "bulma": "^0.7.2",
+    "node-sass": "^4.12.0",
     "node-sass-chokidar": "^1.3",
     "npm-run-all": "^4.1.3",
     "react": "^16.6.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.6",
-    "react-scripts": "^2.0.5"
+    "react-scripts": "^3.1.1"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
