--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
     "lodash.without": "^4.4.0",
     "micro": "^9.3.3",
     "micro-cors": "^0.1.0",
+    "micro-dev": "^3.0.0",
     "twit": "^2.2.11"
+  },
+  "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
