--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,10 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "engineStrict": true,
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "dependencies": {
     "bloomer": "^0.6.3",
     "bulma": "^0.7.2",
